--- a/My profile.html
+++ b/My profile.html
@@ -302,10 +302,10 @@ float : right;
 <p><strong>Ata hocce amar first exprience</strong> is a free template from released under a 
 Creative Commons Attribution 2.5 License</a>. The  photos are from. You"re free to use it for both commercial or personal use. I only ask that you my site in some way. <em>Enjoy :)</em></
 p>
-      <h2>Praesent Scelerisque</h2>
+      <h2>Get my information just scan this Qr code</h2>
   
   
-  <img src="#.jpg"width="220"height="220">
+  <img src="Qr code.jpg"width="220"height="220">
       <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque
 viverra vulputate enim. Aliquam erat volutpat:</p>
       <blockquote>
