--- a/index(01).html
+++ b/index(01).html
@@ -307,6 +307,7 @@ family: Verdana; color: #000000">blog counter</a>
   </div>   
        <style>
                      video{
+                     margin:0px 10%;
                      float:right;
                      }
                      </style>
