--- a/index(01).html
+++ b/index(01).html
@@ -359,7 +359,7 @@ background-position:left 800px top 10px;
 }
 }
 .text-container{
-margin-top:1%;
+margin-top:5%;
 text-align:center;
 }
 </style>
@@ -370,7 +370,7 @@ text-align:center;
 </marquee>
 </div>
 </body>
-</html>                                                                                  <!DOCTYPE html>#0000CD
+</html>                                                                                  
 
                                                                                           
               </div>                                
