--- a/index(01).html
+++ b/index(01).html
@@ -365,9 +365,9 @@ text-align:center;
 </style>
 <body>
 <div class="text-container" >
-
+<marquee>
 <h2>Thanks for visit site</h2>
-
+</marquee>
 </div>
 </body>
 </html>                                                                                  
