--- a/index(01).html
+++ b/index(01).html
@@ -413,6 +413,11 @@ text-align:center;
       <li><a href="">নোটিশ বোর্ড</a></li> 
      </ul> 
     </div> 
+                    <style>
+                   .power-by col-sm-3 img{
+                    border-radius:20px;
+                    }
+                    </style>
     <div class="power-by col-sm-3"> 
      <img src="https://kmrasel.github.io/newexprience/26.jpg">
      <br> 
