--- a/index(01).html
+++ b/index(01).html
@@ -414,15 +414,17 @@ text-align:center;
      </ul> 
     </div> 
                     <style>
-                   .power-by col-sm-3 img{
-                    border-radius:20px;
+                   .imgess{
+                    border-radius:10px;
                     }
                     </style>
     <div class="power-by col-sm-3"> 
+                                  <div class="imagess">
      <img src="https://kmrasel.github.io/newexprience/26.jpg">
      <br> 
      <a href="http://www.jessoreboard.gov.bd" target="_blank">ওয়েব ডেভেলপার,গ্রাফিক্স ও ডিজাইনিং</a>
      <br> কে,এম রাসেল 
+                                                             </div>
     </div> 
    </div> 
   </div> 
