--- a/noname(17).html
+++ b/noname(17).html
@@ -1,3 +1,64 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+<title></title>
+</head>
+<style type="text/css">
+div ul li{
+margin:5px;
+margin-top:2%;
+padding:0px;
+border:5px;
+float:left;
+list-style:none;
+background:red;
+width:170px;
+height:30px;
+color:white;
+text-align:center;
+border-radius:10px;
+font-family:Times new roman;
+font:white;
+}
+li{
+border:10px;
+border-background:red;
+color:blue;
+}
+
+</style>
+<body>
+
+<img src="15.jpg"width="968"height="300">
+
+
+<div>
+<ul>
+<b>
+<a href="#" ><li>Home</li></a>
+<a href="#" ><li>About me</li></a>
+<a href="#" ><li>Gallary</li></a>
+<a href="#" ><li>Results</li></a>
+<a href="#" ><li>Contact me</li></a>
+</b>
+</ul>
+</div>
+<div class="news-section gra"> 
+      <label>News</label> 
+      <marquee behavior="scroll" direction="left" scrollamount="2" onmouseover="this.scrollAmount = 0" onmouseout="this.scrollAmount = 2"> 
+       <span>এইচএসসি-২০১৮ পরীক্ষার ফলাফল আজ ১৯-০৭-২০১৮ তারিখ দুপুর ২:০০ টায় প্রকাশ করা হবে। যশোর শিক্ষা বোর্ডের ফলাফল যশোর বোর্ডের ওয়েব সাইট এবং শিক্ষা প্রতিষ্ঠানের ওয়েব সাইটে পাওয়া যাবে। পরীক্ষা নিয়ন্ত্রক।</span> 
+       <span>ওয়েব মেরামতের কাজ চলছে। সাময়িক অসুবিধার জন্য আমরা আন্তরিকভাবে দুঃখিত। </span> 
+      </marquee> 
+     </div> 
+</body>
+</html>
+
+
+
+
+
+
+
 <html>
 <style type="text/css">
 body{
