--- a/noname(17).html
+++ b/noname(17).html
@@ -74,8 +74,9 @@ align-items:center;
 justify-content:center;
 }
 .Portfolio{
+      float:left;
 display:grid;
-height:50%;
+height:25%;
 grid-gap:10px;
 grid-template-columns:1fr 1fr;
 }
