--- a/noname(17).html
+++ b/noname(17).html
@@ -77,6 +77,7 @@ justify-content:center;
       float:left;
 display:grid;
 height:25%;
+      width:50%;
 grid-gap:10px;
 grid-template-columns:1fr 1fr;
 }
