--- a/noname(17).html
+++ b/noname(17).html
@@ -78,7 +78,7 @@ justify-content:center;
 display:grid;
 height:30%;
       width:70%;
-grid-gap:10px;
+grid-gap:20px;
 grid-template-columns:1fr 1fr;
 }
 </style>
@@ -92,6 +92,21 @@ grid-template-columns:1fr 1fr;
 <div class="item item6" >item6</div>
 <div class="item item7" >item7</div>
 <div class="item item8" >item8</div>
+      <div class="item item9" >item9<br>class 1<class 2<br>class 3<br>class 4</div>
+
+<div class="item item10" >item10</div>
+
+<div class="item item11" >item11</div>
+
+<div class="item item12" >item12</div>
+
+<div class="item item13" >item13</div>
+
+<div class="item item14" >item15</div>
+
+<div class="item item15" >item15</div>
+
+<div class="item item16" >item16</div>
 </div>
 </body>
 </html>
