--- a/noname(17).html
+++ b/noname(17).html
@@ -76,7 +76,7 @@ justify-content:center;
 .Portfolio{
       float:left;
 display:grid;
-height:30%;
+height:200px;
       width:70%;
 grid-gap:20px;
 grid-template-columns:1fr 1fr;
@@ -92,7 +92,7 @@ grid-template-columns:1fr 1fr;
 <div class="item item6" >item6</div>
 <div class="item item7" >item7</div>
 <div class="item item8" >item8</div>
-      <div class="item item9" >item9<br>class 1<class 2<br>class 3<br>class 4</div>
+<div class="item item9" >item9</div>
 
 <div class="item item10" >item10</div>
 
