--- a/noname(17).html
+++ b/noname(17).html
@@ -76,7 +76,7 @@ justify-content:center;
 .Portfolio{
       float:left;
 display:grid;
-height:200px;
+height:25%;
       width:70%;
 grid-gap:20px;
 grid-template-columns:1fr 1fr;
