--- a/noname(17).html
+++ b/noname(17).html
@@ -43,6 +43,11 @@ color:blue;
 </b>
 </ul>
 </div>
+      <style>
+           . news-section gra{
+                 border:10px solid white;
+                 }
+            </style>
 <div class="news-section gra"> 
       <label>News</label> 
       <marquee behavior="scroll" direction="left" scrollamount="2" onmouseover="this.scrollAmount = 0" onmouseout="this.scrollAmount = 2"> 
@@ -76,7 +81,7 @@ justify-content:center;
 .Portfolio{
       float:left;
 display:grid;
-height:25%;
+height:50%;
       width:70%;
 grid-gap:20px;
 grid-template-columns:1fr 1fr;
