--- a/noname(17).html
+++ b/noname(17).html
@@ -46,6 +46,7 @@ color:blue;
       <style>
            . news-section gra{
                  border:10px solid white;
+                 background:bluesky;
                  }
             </style>
 <div class="news-section gra"> 
@@ -81,8 +82,8 @@ justify-content:center;
 .Portfolio{
       float:left;
 display:grid;
-height:50%;
-      width:70%;
+height:70%;
+      width:75%;
 grid-gap:20px;
 grid-template-columns:1fr 1fr;
 }
