--- a/noname(17).html
+++ b/noname(17).html
@@ -45,7 +45,7 @@ color:blue;
 </div>
       <style>
            . news-section gra{
-                 border:10px solid white;
+                 border:10px;
                  background:bluesky;
                  }
             </style>
