--- a/noname(17).html
+++ b/noname(17).html
@@ -71,7 +71,7 @@ body{
 height:100vh;
 }
 .item{
-background:#E6E6FA;
+background:#C0C0C0;
 color:#000;
 font-family:Times new roman;
 font-size:18px;
