--- a/noname(17).html
+++ b/noname(17).html
@@ -82,6 +82,8 @@ justify-content:center;
 .Portfolio{
       float:left;
 display:grid;
+      border:1px;
+      border-style:solid;
 height:70%;
       width:75%;
 grid-gap:20px;
