--- a/noname(17).html
+++ b/noname(17).html
@@ -73,7 +73,8 @@ height:100vh;
 .item{
 background:#C0C0C0;
 color:#000;
-      border:3px;
+      border:2px;
+      border-color:silver;
       border-style:solid;
 font-family:Times new roman;
 font-size:18px;
