--- a/noname(17).html
+++ b/noname(17).html
@@ -71,7 +71,7 @@ body{
 height:100vh;
 }
 .item{
-background:#C0C0C0;
+background:#F5F5F5;
 color:#000;
       border:2px;
       border-color:silver;
