--- a/noname(17).html
+++ b/noname(17).html
@@ -58,8 +58,8 @@ color:blue;
     <style type="text/css">
 .news{
 border-style:solid;
-border:2px;
-border-color:black;
+border:3px;
+border-color:silver;
 width:75%;
 height:9%;
 background:#F5F5F5;
