--- a/noname(17).html
+++ b/noname(17).html
@@ -57,8 +57,7 @@ color:blue;
     
     <style type="text/css">
 .news{
-border-style:solid;
-border:3px;
+border:2px solid;
 border-color:silver;
 width:75%;
 height:9%;
@@ -76,6 +75,13 @@ margin:2px;
 }
 #clear{
       float:left;
+      }
+          #clear span{
+               
+      border:2px solid;
+                border-color:silver;
+      width:80%;
+      background:#F5F5F5;
       }
 
 </style>
