--- a/noname(17).html
+++ b/noname(17).html
@@ -75,14 +75,12 @@ margin:2px;
 }
 #clear{
       float:left;
-      }
-          #clear span{
-               
       border:2px solid;
-                border-color:silver;
-      width:80%;
+      border-color:silver;
+      border-width:80%;
       background:#F5F5F5;
       }
+      
 
 </style>
 <div class="news" >
