--- a/noname(17).html
+++ b/noname(17).html
@@ -75,9 +75,10 @@ margin:2px;
 }
 #clear{
       float:left;
+      margin:10px;
       border:2px solid;
       border-color:silver;
-      border-width:80%;
+      border-width:75%;
       background:#F5F5F5;
       }
       
