--- a/noname(17).html
+++ b/noname(17).html
@@ -75,10 +75,10 @@ margin:2px;
 }
 #clear{
       float:left;
-      margin:10px;
+      margin:10px 0px;
       border:2px solid;
       border-color:silver;
-      border-width:75%;
+      border-width:60%;
       background:#F5F5F5;
       }
       
