--- a/noname(17).html
+++ b/noname(17).html
@@ -57,6 +57,7 @@ color:blue;
     
     <style type="text/css">
 .news{
+      margin:10px 0px;
 border:2px solid;
 border-color:silver;
 width:75%;
@@ -82,7 +83,10 @@ margin:2px;
       background:#F5F5F5;
       }
       
-
+#clear label{
+      height:15px;
+      background:orange;
+      }
 </style>
 <div class="news" >
 <h6>My life</h6>
