--- a/noname(17).html
+++ b/noname(17).html
@@ -102,7 +102,7 @@ margin:2px;
     
 <div id="clear"> 
       <label>News</label> 
-      <marquee behavior="scroll" direction="left" scrollamount="2" onmouseover="this.scrollAmount = 0" onmouseout="this.scrollAmount = 2"> 
+      <marquee>
        <span>এইচএসসি-২০১৮ পরীক্ষার ফলাফল আজ ১৯-০৭-২০১৮ তারিখ দুপুর ২:০০ টায় প্রকাশ করা হবে। যশোর শিক্ষা বোর্ডের ফলাফল যশোর বোর্ডের ওয়েব সাইট এবং শিক্ষা প্রতিষ্ঠানের ওয়েব সাইটে পাওয়া যাবে। পরীক্ষা নিয়ন্ত্রক।</span> 
        <span>ওয়েব মেরামতের কাজ চলছে। সাময়িক অসুবিধার জন্য আমরা আন্তরিকভাবে দুঃখিত। </span> 
       </marquee> 
