--- a/noname(17).html
+++ b/noname(17).html
@@ -164,3 +164,16 @@ grid-template-columns:1fr 1fr;
 </div>
 </body>
 </html>
+      <style>
+           . personal{
+                 border:2px solid;
+                 border-color:silver;
+                 border-width:25%;
+                 background:#F5F5F5;
+                 float:right;
+                 }
+            </style>
+      <div class="personal">
+      <h1>My image</h1>
+      <h1>My results</h1>
+            </siv>
