--- a/noname(17).html
+++ b/noname(17).html
@@ -166,6 +166,7 @@ grid-template-columns:1fr 1fr;
 </html>
       <style>
            . personal{
+                 margin:0px 5px;
                  border:2px solid;
                  border-color:silver;
                  border-width:25%;
@@ -176,4 +177,4 @@ grid-template-columns:1fr 1fr;
       <div class="personal">
       <h1>My image</h1>
       <h1>My results</h1>
-            </siv>
+            </div>
