--- a/noname(17).html
+++ b/noname(17).html
@@ -165,13 +165,15 @@ grid-template-columns:1fr 1fr;
 </body>
 </html>
       <style>
-           . personal{
+           . personal h1{
                  margin:0px 5px;
                  border:2px solid;
                  border-color:silver;
                  border-width:25%;
+                 height:80%;
                  background:#F5F5F5;
                  float:right;
+                 
                  }
             </style>
       <div class="personal">
