--- a/practic(21).html
+++ b/practic(21).html
@@ -56,7 +56,7 @@
     <ul class="menu"> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/index(01)">প্রথম পাতা</a></li> 
      <li><a href="My information.html">সম্পর্কে</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/Personal%20bayodata">পার্সোনাল বায়োডাটা</a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/Personal%20bayodata">পা.বায়োডাটা</a></li> 
      <li><a href="">শিক্ষাগত রেকর্ড</a></li> 
      <li><a href="">ফলাফল</a></li> 
      <li><a href="#">ফটো</a></li> 
@@ -295,7 +295,7 @@
    
    <div class="Videos" >
    <h1>Videos</h1>
-   <iframe width="200%"height="280px"src="https://m.youtube.com/watch?v=UjAI7DT275E"borderframe="0"allowfullscreen>
+   <iframe width="300%"height="280px"src="https://m.youtube.com/watch?v=UjAI7DT275E"borderframe="0"allowfullscreen>
    </iframe>
    </div>
    </div>
