--- a/practic(21).html
+++ b/practic(21).html
@@ -233,7 +233,7 @@
    .Videos{
    margin-top:10px;
    
-   height:350px;
+   height:250px;
    background:#F5F5F5;
    }
    .Videos h1{
@@ -283,8 +283,7 @@
    </div>
    <div class="results" >
    <h1>Enjoy this videos</h1>
-   <iframe width="100%"height="100%"src="https://youtu.be/cMsLFppH0cY"border="0"allowfullscreen>
-   </iframe>
+   <img src="asif.jpg"width="100%"height="100%">
    </div>
    <div class="Certificates" >
    <h1>Certificates</h1>
@@ -293,15 +292,7 @@
    
    
    
-    <div class="Videos5" >
-
-   <h1>Videos</h1>
-
-   <iframe width="28%"height="250px"src="https://m.youtube.com/watch?v=UjAI7DT275E"borderframe="0"allowfullscreen>
-
-   </iframe>
-
-   </div>
+    
     
    </div>
    <style>
