--- a/practic(21).html
+++ b/practic(21).html
@@ -283,12 +283,15 @@
    </div>
    <div class="results" >
    <h1>Enjoy this videos</h1>
-   <img src="asif.jpg"width="100%"height="100%">
+   <img src="asif1.jpg"width="100%"height="70%">
    </div>
    <div class="Certificates" >
    <h1>Certificates</h1>
    </div>
-   
+   <div class="Videos">
+    <h1> Videos</h1>
+    <img src="imran.jpg"width="100%"height="70%">
+    </div>
    
    
    
