--- a/practic(21).html
+++ b/practic(21).html
@@ -283,14 +283,14 @@
    </div>
    <div class="results" >
    <h1>Enjoy this videos</h1>
-   <img src="asif1.jpg"width="100%"height="70%">
+   <img src="asif1.jpg"width="100%"height="250">
    </div>
    <div class="Certificates" >
    <h1>Certificates</h1>
    </div>
    <div class="Videos">
     <h1> Videos</h1>
-    <img src="imran.jpg"width="100%"height="70%">
+    <img src="imran.jpg"width="100%"height="250">
     </div>
    
    
