--- a/practic(4).html
+++ b/practic(4).html
@@ -374,14 +374,14 @@ margin-top:5px;
 <li>আমার প্রোগ্রাম সমূহ<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3DMP9qz3FmvE3KT60UGn4g1whqxVa8pXPgImQgIw9_wH5g5n17DABw"width="120"height="100" ><a href="#" >£ ফটোগ্রাফি</a><br><a href="#" >£ পার্সোনাল ডকুমেন্ট</a><br><a href="#" >£ কবিতা সমূহ</a><br><a href="#" >£ লাইব্রেরী</a></li>
 <li>প্রাতিষ্ঠানিক ওয়েবসাইট<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfXJL5OmlHqnJoJWkIk6DpupxvsjzWM5VxVSFpRloqdfgllbyp8N7X2mLh" width="120"height="100"><a href="#" >£ কলেজ ওয়েবসাইট</a> <br><a href="#" >£ বিশ্ববিদ্যালয় ওয়েবসাইট</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfXJL5OmlHqnJoJWkIk6DpupxvsjzWM5VxVSFpRloqdfgllbyp8N7X2mLh" width="120"height="100"><a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/" >£ কলেজ ওয়েবসাইট</a> <br><a href="http://www.nu.ac.bd/" >£ বিশ্ববিদ্যালয় ওয়েবসাইট</a></li>
 <li>Social Media Corner<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEOLJ1zgqYwgbN86KVv5nLSLr2F0DSgOHgi_yBk-lQpl6xguuWn4Az9pWC"width="120" height="100">
 <a href="#" >£ Facebook</a><br><a href="#" >£ Youtube</a><br><a href="#" >£ Google Sarch</a><br><a href="#" >£ Bing Sarch</a><br><a href="#" >£ Twiter</a></li>
 <li>Learning Educational Websites<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="#" >£ Khan Academy</a><br><a href="#" >£ Wikipidia</a><br><a href="#" >£ Nctb board</a><br><a href="#" >£ Sikkah</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="https://bn.khanacademy.org/" >£ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >£ Wikipidia</a><br><a href="http://nctb.gov.bd/" >£ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >£ Sikkah</a></li>
 <li>Online Newspapers<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100">£ Prothom-Alo<br>£ Noya-Digonto<br>£ Songgram<br>£ Juganttor</li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="#">£ Noya-Digonto</a><br><a href="#">£ Songgram</a><br><a href="#">£ Juganttor</a></li>
 <li>Musical website<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100">£ ###<br>£ ###<br>£ ###<br>£ ###</li>
 
