--- a/practic(4).html
+++ b/practic(4).html
@@ -381,7 +381,7 @@ margin-top:5px;
 <li>Learning Educational Websites<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="https://bn.khanacademy.org/" >£ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >£ Wikipidia</a><br><a href="http://nctb.gov.bd/" >£ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >£ Sikkah</a></li>
 <li>Online Newspapers<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="#">£ Noya-Digonto</a><br><a href="#">£ Songgram</a><br><a href="#">£ Juganttor</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">£ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">£ Songgram</a><br><a href="https://www.jugantor.com/">£ Juganttor</a></li>
 <li>Musical website<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100">£ ###<br>£ ###<br>£ ###<br>£ ###</li>
 
