--- a/practic(4).html
+++ b/practic(4).html
@@ -377,7 +377,7 @@ margin-top:5px;
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfXJL5OmlHqnJoJWkIk6DpupxvsjzWM5VxVSFpRloqdfgllbyp8N7X2mLh" width="120"height="100"><a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/" >£ কলেজ ওয়েবসাইট</a> <br><a href="http://www.nu.ac.bd/" >£ বিশ্ববিদ্যালয় ওয়েবসাইট</a></li>
 <li>Social Media Corner<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEOLJ1zgqYwgbN86KVv5nLSLr2F0DSgOHgi_yBk-lQpl6xguuWn4Az9pWC"width="120" height="100">
-<a href="#" >£ Facebook</a><br><a href="#" >£ Youtube</a><br><a href="#" >£ Google Sarch</a><br><a href="#" >£ Bing Sarch</a><br><a href="#" >£ Twiter</a></li>
+<a href="https://facebook.com" >£ Facebook</a><br><a href="https://youtube.com" >£ Youtube</a><br><a href="https://google.com" >£ Google Sarch</a><br><a href="https://twitter.com" >£ Bing Sarch</a><br><a href="#" >£ Twiter</a></li>
 <li>Learning Educational Websites<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="https://bn.khanacademy.org/" >£ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >£ Wikipidia</a><br><a href="http://nctb.gov.bd/" >£ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >£ Sikkah</a></li>
 <li>Online Newspapers<br>
