--- a/practic(4).html
+++ b/practic(4).html
@@ -453,6 +453,7 @@ text-align:center;
 list-style:none;
 padding:2px;
 background:silver;
+ color:white;
 }
 .end ul li r{
 color:white;
@@ -463,8 +464,8 @@ color:white;
 </style>
 <div class="end" >
 <ul>
-<li><r><button>Website upgration date:01/01/2019</button></r></li>
-<li><t><button>Before website</button></t></li>
+<li><r>Website upgration date:01/01/2019</r></li>
+<li><t>Before website</t></li>
 </ul>
 </div>
 </div>
