--- a/practic(4).html
+++ b/practic(4).html
@@ -358,7 +358,7 @@ margin-top:5px;
 <li>স্নাতক সম্মান কর্নার<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyqK0heBQFAoa5OrGPxqLZiqoNb-32Zc4eHYngiEaMEuE9bAoL8SW5U1W5Sw"width="120" height="100"><a href="#" >£ প্রথম বর্ষ</a><br><a href="#" >£ দ্বিতীয় বর্ষ </a><br><a href="#" >£ তৃতীয় বর্ষ</a><br><a href="#" >£ চতুর্থ বর্ষ</a></li>
 <li>ইন্টারমিডিয়েট কর্নার<br> 
- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo_2Sz5paCMUtghKCnoUX6u1ZPRzyEeazN1_t1dsQfdfleRiFpKSmUY2A"width="120"height="100"><br><a href="#" >£ প্রথম বর্ষ</a><br><a href="#" >£ দ্বিতীয় বর্ষ</a></li>
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo_2Sz5paCMUtghKCnoUX6u1ZPRzyEeazN1_t1dsQfdfleRiFpKSmUY2A"width="120"height="100"><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 1st year.html" >£ প্রথম বর্ষ</a><br><a href="https://kmrasel9748.github.io/newexprience2/intermidiate 2nd year.html" >£ দ্বিতীয় বর্ষ</a></li>
 <li>দাখিল কর্নার<br>
 <img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/19e8b5ae_6ae8_49d4_8d84_81eb15911974/open-book.png"width="120"height="100"><a href="#" >£ নবম শ্রেনি</a><br><a href="#" >£ দশম শ্রেনি</a></li>
 <li>জে,ডি,সি কর্নার<br>
@@ -370,7 +370,7 @@ margin-top:5px;
 <li>রেজাল্টশীট কর্নার<br>
 <img src="https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/result_sheet.png"width="120"height="100">£ এইচ,এস,সি (২০১৭)<br>£ এস,এস,সি (২০১৫) <br>£ জে,ডি,সি</li>
 <li>ব্যক্তিগত সাইট কর্নার<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc"width="120"height="100"><a href="#" >£ পার্সোনাল বায়োডাটা</a> <br><a href="#" >£ ফ্যামিলি ফটো</a><br><a href="#" >£ প্রোফাইল</a> <br><a href="#" >£ যোগাযোগ</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc"width="120"height="100"><a href="#" >£ পার্সোনাল বায়োডাটা</a> <br><a href="#" >£ ফ্যামিলি ফটো</a><br><a href="https://kmrasel9748.github.io/newexprience2/n my profile page.html" >£ প্রোফাইল</a> <br><a href="#" >£ যোগাযোগ</a></li>
 <li>আমার প্রোগ্রাম সমূহ<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3DMP9qz3FmvE3KT60UGn4g1whqxVa8pXPgImQgIw9_wH5g5n17DABw"width="120"height="100" ><a href="#" >£ ফটোগ্রাফি</a><br><a href="#" >£ পার্সোনাল ডকুমেন্ট</a><br><a href="#" >£ কবিতা সমূহ</a><br><a href="#" >£ লাইব্রেরী</a></li>
 <li>প্রাতিষ্ঠানিক ওয়েবসাইট<br>
