--- a/practic(4).html
+++ b/practic(4).html
@@ -262,7 +262,7 @@ color:bule;
 <div class="right" >
 <div class="box" >
 <h1>Digree Type</h1>
-<img src="https://kmrasel9748.github.io/newexprience2/km%20rasel.jpg"width="220"height="180">
+<a href="km rasel.jpg"><img src="https://kmrasel9748.github.io/newexprience2/km%20rasel.jpg"width="220"height="180"></a>
 <jr><br>K.M.RASEL<br>BA (Hon's) Digree<br>National University<br>Branch of Govt.Sm.College.Morrelgonj,Bagerhat</jr>
 </div>
 <div class="views" >
@@ -301,7 +301,7 @@ family: Verdana; color: #000000">blog counter</a>
 
 <div class="results" >
 <h1>Programmer Type</h1>
-<img src="https://kmrasel.github.io/newexprience/26.jpg"width="220"height="180">
+<a href="26.jpg"><img src="https://kmrasel.github.io/newexprience/26.jpg"width="220"height="180"></a>
 <jr><br>Website designing & developing<br>K.M.RASEL<br>Programmer of<br>Html & Css</jr>
 </div>
 
