--- a/practic(4).html
+++ b/practic(4).html
@@ -368,7 +368,7 @@ margin-top:5px;
 <li>কারিগরি শিক্ষা কর্নার<br>
 <img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/1bb65a9d_62d2_42d1_8996_f6f06502c759/checklist-symbol%20(3).png"width="120"height="100"><a href="#" >£ কম্পিউটার</a><br><a href="#" >£ মার্কেটিং</a> <br><a href="#" >£ ইঞ্জিনিয়ারিং</a><br><a href="#" > £ ডিপ্লমা</a></li>
 <li>রেজাল্টশীট কর্নার<br>
-<img src="https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/result_sheet.png"width="120"height="100">£ এইচ,এস,সি (২০১৭)<br>£ এস,এস,সি (২০১৫) <br>£ জে,ডি,সি</li>
+<a href="https://kmrasel9748.github.io/newexprience2/Results%20sheet20"><img src="https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/result_sheet.png"width="120"height="100">£ এইচ,এস,সি (২০১৭)<br>£ এস,এস,সি (২০১৫) <br>£ জে,ডি.সি</a></li>
 <li>ব্যক্তিগত সাইট কর্নার<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc"width="120"height="100"><a href="#" >£ পার্সোনাল বায়োডাটা</a> <br><a href="#" >£ ফ্যামিলি ফটো</a><br><a href="https://kmrasel9748.github.io/newexprience2/n my profile page.html" >£ প্রোফাইল</a> <br><a href="#" >£ যোগাযোগ</a></li>
 <li>আমার প্রোগ্রাম সমূহ<br>
