--- a/practic(4).html
+++ b/practic(4).html
@@ -372,7 +372,7 @@ margin-top:5px;
 <li>ব্যক্তিগত সাইট কর্নার<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc"width="120"height="100"><a href="#" >£ পার্সোনাল বায়োডাটা</a> <br><a href="#" >£ ফ্যামিলি ফটো</a><br><a href="https://kmrasel9748.github.io/newexprience2/n my profile page.html" >£ প্রোফাইল</a> <br><a href="#" >£ যোগাযোগ</a></li>
 <li>আমার প্রোগ্রাম সমূহ<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3DMP9qz3FmvE3KT60UGn4g1whqxVa8pXPgImQgIw9_wH5g5n17DABw"width="120"height="100" ><a href="#" >£ ফটোগ্রাফি</a><br><a href="https://kmrasel9748.github.io/newexprience2/Documents" >£ পার্সোনাল ডকুমেন্ট</a><br><a href="https://kmrasel.github.io/newexprience/My%20poem.html" >£ কবিতা সমূহ</a><br><a href="#" >£ লাইব্রেরী</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3DMP9qz3FmvE3KT60UGn4g1whqxVa8pXPgImQgIw9_wH5g5n17DABw"width="120"height="100" ><a href="#" >£ ফটোগ্রাফি</a><br><a href="https://kmrasel9748.github.io/newexprience2/Documents" >£ পার্সোনাল ডকুমেন্ট</a><br><a href="https://kmrasel.github.io/newexprience/My%20poem.html" >£ কবিতা সমূহ</a><br><a href="http://dik-grantha.com/" >£ লাইব্রেরী</a></li>
 <li>প্রাতিষ্ঠানিক ওয়েবসাইট<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfXJL5OmlHqnJoJWkIk6DpupxvsjzWM5VxVSFpRloqdfgllbyp8N7X2mLh" width="120"height="100"><a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/" >£ কলেজ ওয়েবসাইট</a> <br><a href="http://www.nu.ac.bd/" >£ বিশ্ববিদ্যালয় ওয়েবসাইট</a></li>
 <li>Social Media Corner<br>
