--- a/About me.html
+++ b/About me.html
@@ -143,15 +143,24 @@ family: Verdana; color: #000000">blog counter</a>
 <style type="text/css">
 body{
 font-family:Times new roman;
+background-image:url('https://www.jessoreboard.gov.bd/assets/jb/images/bodybg1.png');;
 }
 .top{
 border:2px solid black;
 width:660px;
 height:300px;
-background:red;
+background-image:url('about top.jpg');
 }
-.top img{
+.top3{
 margin-top:5px;
+width:320px;
+height:230px;
+border:2px solid silver;
+float:left;
+}
+.top3 img{
+width:320px;
+height:230px;
 }
 .top2 ul li{
 border:2px solid silver;
@@ -165,6 +174,15 @@ text-align:center;
 color:white;
 font-size:19px;
 background:green;
+}
+.top h1{
+margin-top:60px;
+margin:60px 20px;
+text-align:center;
+font-size:50px;
+color:white;
+
+float:right;
 }
 .menu2 ul li{
 border:2px solid silver;
@@ -184,6 +202,7 @@ margin-top:0px;
 list-style:none;
 margin:5px;
 background:orangered;
+
 }
 .item1 ul li{
 margin:0px;
@@ -210,15 +229,19 @@ float:left;
 <div class="top" >
 
 <div class="top2" >
+
 <ul>
-<li>Home</li>
-<li>Results</li>
-<li>P.bayodata</li>
-<li>News</li>
-<li>Contact me</li>
+<li><a href="https://kmrasel9748.github.io/newexprience2/index.html" >Home</a></li>
+<li><a href="https://kmrasel9748.github.io/newexprience2/Results%20sheet20" >Results</a></li>
+<li><a href="https://kmrasel9748.github.io/newexprience2/Personal%20bayodata" >P.bayodata</a></li>
+<li><a href="https://kmrasel9748.github.io/newexprience2/index.html" >News</a></li>
+<li><a href="https://kmrasel9748.github.io/newexprience2/Contact%20me" >Contact me</a></li>
 </ul>
 </div>
-<img src="Principal.jpg" width="660"height="230">
+<div class="top3"> 
+<img src="about img.jpg" width="230"height="230">
+</div>
+<h1>ABOUT ME</h1>
 </div>
 <style type="text/css">
 .menu2 ul li {
@@ -237,9 +260,18 @@ background:blue;
 <div class="item1" >
 <ul>
 <li><img src="https://kmrasel.github.io/newexprience/55.jpg" width="120" height="120" ><span>আমি নিজেকে অতি সাধারন একটা মানুষ বলে মনে করছি। সর্বদা একাকিত্বতা অবলম্বন করে চলি। সমাজের যত হয়রানী,রাহাজানি, আড্ডাবাজি এড়িয়ে চলি। আমি আমার নিজের পথ একাই চলতে ভালোবাসি। বন্ধুদের সাথে দুষ্টুমি সহ সব ধরনের অস্থিরতা এডিয়ে চলি। আমি আমার মতাদর্শে বিশ্বাসি। নিজের গতিতে আমি প্রতিটা স্টেপ বাই স্টেপ চলি। কিছুনা ভিন্নতা বজায় রাখার চেষ্টা করি। সমাজের লোক নিন্দা সহ বিভিন্ন কলঙ্ক জনিত কর্মকান্ডের ধরা ছোয়ার বাহিরে থাকি। সম্পর্কের ক্ষেত্রে আমি পরিবারের মতাদর্শে বিশ্বাসী। প্রতিটা ধাপ আমি অতিক্রম করি নিজস্ব গতিতে নিজস্ব চিন্তাধারায়। মানুষটা দারিদ্র হলেও আমার সর্বদিকের চিন্তাধারা ভিন্নতা বজায় রেখে চলি। আমার কিছু লক্ষ রয়েছে যেমনি সকলের থাকে। এটাই আমার জীবনের ছোট্ট একটা গল্পের স্ক্রিপ।</span></li>
-<li><img src="https://kmrasel.github.io/newexprience/75.jpg" width="120" height="120" ><span>আমি আমার মতো</span></li>
-<li><img src="https://kmrasel.github.io/newexprience/29.jpg" width="120" height="120" ><span>আমি আমার মতো</span></li>
-<li><img src="https://kmrasel.github.io/newexprience/Km%20Rasel.jpg" width="120" height="120" ><span>আমি আমার মতো</span></li>
+<li><img src="https://kmrasel.github.io/newexprience/75.jpg" width="120" height="120" ><span> আমি মানুষটা যেমনি হই না কেন আমার চিন্তাধারা সবকিছুই আমার পরিপন্থি। আমার চিন্তাধারার ক্ষেত্রে কিছুটক পরিবর্তন হতে পারে অন্যদের থেকে তবে আমার হিসাব নিজ গতিতেই অব্যাহত থাকবে। দেশকে ভালোবাসা,দেশের মানুষকে ভালোবাসা যেমনি ঈমানের অঙ্গ,তেমনি সেই সূত্র ধরেই আমি সবাইকে শ্রদ্ধাসূচক দৃষ্টিতে দেখি। আমার ধারনা ভালোবাসা পেতে হলে অবশ্যই ভালোবাসা দিতে হয়। এই লক্ষ্য নিযে প্রতিটা মানুষের জীবনের পথে অগ্রসর হওয়া দরকার কিন্তু আমরা সেটাকে বাঞ্চাত করে চলি। আসলেই এটা উচিৎ নয়। সেটা আমাদে প্রতিটি ক্ষেত্রে অনুধাবন করা উচিৎ।</span></li>
+<li><img src="Rsl1.jpg" width="120" height="120" ><span>
+
+
+"অসৎ সঙ্গ ত্যাগ কর,আলস্য দোষের আ-কর" এই মতাদর্শটাই আমি আমার নিজের জীবনে ফলাবার চেষ্টা করে থাকি হতে পারে একা আংশিক কিংবা ক্ষুদ্র। প্রতিটা মানুষ একটা সুন্দর মন নিয়ে পৃথিবীতে আভির্ভুত হয়। পৃথিবীর পরিবেশ, সঙ্গ দোষ,হয়রানী, রাহাজানিই তাকে বাধ্য করে দেয় অসৎ পথে চলতে। প্রকৃত পক্ষে এই শিক্ষাটা সে কোথা থেকে অন্বেষন করে থাকে। পরিবেশগত সামাজিক আচরন থেকে। তাই আমি প্রতিটি ক্ষেত্রে সঙ্গ দোষ এড়িয়ে চলি। দেখিতে চাই আমি সঙ্গ বিহিত লাইফটা আমার কেমন হয়। হোই কেন আমি পার্থক্য অন্যদের থেকে। সেটা আমার ভাবার বিষয় নয়। সঙ্গ দোষের যে প্রভাব সেটা যেন আমাকে কখনোই গ্রাস করতে না পারে সেই দিকেই আমার দৃঢ় দৃষ্টিক্ষেপ।
+
+
+
+
+</span></li>
+<li><img src="https://kmrasel.github.io/newexprience/Km%20Rasel.jpg" width="120" height="120" ><span>
+নিজেকে কিভাবে রিপ্রজেন্ট করবো সেই সিস্টেমটাই আমার অজানা তবুও কিছু কথা না বললেই নয়। শিক্ষা ক্ষেত্রে আমি আমার নিজস্ব গতিধারায়ই চলি। হতে পারে সে পথ দুঃখ দুর্দশা পূর্ন কিংবা কাতরতার কিছু গ্লানিযুক্ত। লেখাপড়ার ক্ষেত্রে আমি সাধ্যমত অন্বেষনের চেষ্টা করে থাকি তাতে যততা সফলতা অর্জন করতে পারিনা কেন। কারন আমার লেখাপড়ার সিস্টেম হতে পারে অনেকের অজানা। তাতে আমার কিছুই যায় আসে না। আমার অগ্রগতি নিজস্ব চিন্তাধারা আমাকে বিকসিত করে তুলেছে এবং তুলবে। সেই লক্ষে আমি অগ্রসারিত হয়ে যাব।</span></li>
 </ul>
 </div>
 <div class="menu3" >
@@ -251,52 +283,55 @@ background:blue;
 <li><y></y></li>
 </ul>
 </div>
+<style type="text/css">
+.lmenu1{
+margin-top:20px;
+border:2px solid silver;
+width:660px;
+height:250px;
+float:left;
+font-size:16px;
+background:silver;
+color:red;
+}
+.left{
+border:2px solid silver;
+width:310px;
+height:255px;
+float:left;
+}
+
+</style>
+<div class="lmenu1" >
+<div class="left" >
+<img src="Rsl3.jpg"width="330" height="250">
+</div>
+///আমার সোনার বাংলা, আমি তোমায় ভালোবাসি,,,,জন্ম দিয়েছ মাগো বলে বড় বেশি ভালোবাসি// সুজানা-সুফলা,সবুজ শ্যামলা আমাদেরই দেশ। এদেশে দেশে রয়েছে অনেক নাম না জানা পাখি যা আমাদের সংস্কৃতি বহন করে থাকে। পরিবেশ বড্ড ভুমিকা রাখে সংস্কৃতির ক্ষেত্রে তবে মানুষের ভুমিকাটাই বড্ড বেশি পরিমানের কারন কেবল মানুষই এগুলো ভোগ করে। মানুষ বিহলে মুল্যহীন সংস্কৃতি। পরিবেশ যেভাবে দেশকে ভালোবেসে তার বুকের মধ্যে আকড়ে ধরে ঠিক তেমনি আমাদের প্রত্যেকের উচিৎ নিজ নিজ সাদ্য মত দেশকে ভালোবাসা।
 </div>
 
-</body>
-</html>
 <style type="text/css">
-.item3{
-margin-top:10px;
+.lmenu2{
+margin-top:20px;
 border:2px solid silver;
 width:660px;
-height:270px;
+height:255px;
 float:left;
-background:silver;
-font-size:20px;
+font-size:16px;
+background:green;
+color:white;
 }
-.item3 img{
+.left{
+border:2px solid silver;
+width:330px;
+height:250px;
 float:left;
-}
-.item3 span{
-float:right;
-margin:0px 10px;
-color:black;
 
 }
+
 </style>
-<div class="item3" >
-<img src="https://kmrasel.github.io/newexprience/13.jpg"width="270"height="270"><span>আমি আমার দেশকে অনেক ভালোবাসি।</span></div>
-<style type="text/css">
-.item4{
-margin-top:15px;
-border:2px solid silver;
-width:660px;
-height:270px;
-float:left;
-background:green;
-}
-.item4 span{
-float:left;
-margin:0px 20px;
-color:white;
-padding:10px;
-}
-.item4 img{
-float:left;
-}
-</style>
-<div class="item4" >
-<img src="https://kmrasel.github.io/newexprience/20.jpg"width="270"height="270">
-<span>Ami amr mo2</span>
+<div class="lmenu2" >
+<div class="left" >
+<img src="https://kmrasel.github.io/newexprience/13.jpg"width="330"height="250" >
+</div>
+///আমার সোনার বাংলা, আমি তোমায় ভালোবাসি,,,,জন্ম দিয়েছ মাগো বলে বড় বেশি ভালোবাসি// সুজানা-সুফলা,সবুজ শ্যামলা আমাদেরই দেশ। এদেশে দেশে রয়েছে অনেক নাম না জানা পাখি যা আমাদের সংস্কৃতি বহন করে থাকে। পরিবেশ বড্ড ভুমিকা রাখে সংস্কৃতির ক্ষেত্রে তবে মানুষের ভুমিকাটাই বড্ড বেশি পরিমানের কারন কেবল মানুষই এগুলো ভোগ করে। মানুষ বিহলে মুল্যহীন সংস্কৃতি। পরিবেশ যেভাবে দেশকে ভালোবেসে তার বুকের মধ্যে আকড়ে ধরে ঠিক তেমনি আমাদের প্রত্যেকের উচিৎ নিজ নিজ সাদ্য মত দেশকে ভালোবাসা।
 </div>
