--- a/practic(4).html
+++ b/practic(4).html
@@ -56,7 +56,7 @@
     <ul class="menu"> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/index(01)">প্রথম পাতা</a></li> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/About%20me">সম্পর্কে</a></li> 
-     <li><a href="https://kmrasel9748.github.io/newexprience2/Personal%20bayodata">পার্সোনাল বায়োডাটা</a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/My%20personal%20bayodata">পার্সোনাল বায়োডাটা</a></li> 
      <li><a href="">শিক্ষাগত রেকর্ড</a></li> 
      <li><a href="">ফলাফল</a></li> 
      <li><a href="#">ফটো</a></li> 
