--- a/practic(4).html
+++ b/practic(4).html
@@ -370,7 +370,7 @@ margin-top:5px;
 <li>রেজাল্টশীট কর্নার<br>
 <a href="https://kmrasel9748.github.io/newexprience2/Results%20sheet20"><img src="https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/result_sheet.png"width="120"height="100">£ এইচ,এস,সি (২০১৭)<br>£ এস,এস,সি (২০১৫) <br>£ জে,ডি.সি</a></li>
 <li>ব্যক্তিগত সাইট কর্নার<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc"width="120"height="100"><a href="#" >£ পার্সোনাল বায়োডাটা</a> <br><a href="#" >£ ফ্যামিলি ফটো</a><br><a href="https://kmrasel9748.github.io/newexprience2/n my profile page.html" >£ প্রোফাইল</a> <br><a href="#" >£ যোগাযোগ</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy0zA7owI2ol_DdhYhnpRVbjLe2Nv6hnwwIGvfjzCqgDXvVcsd_i109Wc"width="120"height="100"><a href="https://kmrasel9748.github.io/newexprience2/My%20personal%20bayodata" >£ পার্সোনাল বায়োডাটা</a> <br><a href="#" >£ ফ্যামিলি ফটো</a><br><a href="https://kmrasel9748.github.io/newexprience2/n my profile page.html" >£ প্রোফাইল</a> <br><a href="#" >£ যোগাযোগ</a></li>
 <li>আমার প্রোগ্রাম সমূহ<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3DMP9qz3FmvE3KT60UGn4g1whqxVa8pXPgImQgIw9_wH5g5n17DABw"width="120"height="100" ><a href="#" >£ ফটোগ্রাফি</a><br><a href="https://kmrasel9748.github.io/newexprience2/Documents" >£ পার্সোনাল ডকুমেন্ট</a><br><a href="https://kmrasel.github.io/newexprience/My%20poem.html" >£ কবিতা সমূহ</a><br><a href="http://dik-grantha.com/" >£ লাইব্রেরী</a></li>
 <li>প্রাতিষ্ঠানিক ওয়েবসাইট<br>
