--- a/practic(4).html
+++ b/practic(4).html
@@ -1,5 +1,9 @@
 <html lang="en"><head><style>
  <body background="https://www.jessoreboard.gov.bd/assets/jb/images/bodybg1.png"> 
+body{
+ background-img:url('https://www.jessoreboard.gov.bd/assets/jb/images/bodybg1.png');
+ }
+ 
  </style>
 
 
