--- a/Contact me2.html
+++ b/Contact me2.html
@@ -258,7 +258,7 @@ float:left;
 <n2>Facebook id name:Sopnomoy Rasel</n2>
 </div>
 <div class="dis5" >
-<m2>Facebook page:F.RASEL748</m2>
+<a href="https://facebook.com/Rasel748"><m2>Facebook page:F/RASEL748</m2></a>
 </div>
 <div class="dis6" >
 <n2>Twitter id name:</n2>
@@ -326,7 +326,7 @@ float:left;
 <m2>E-mail:kmrasel9748@gmail.com</m2>
 </div>
 <div class="dis8" >
-<n2>Youtube channel:RASEL9748</n2>
+<a href="https://youtube.com/Rasel9748"><n2>Youtube channel:RASEL9748</n2></a>
 </div>
 <div class="dis9" >
 <m2>Facebook group:</m2>
