--- a/my photography.html
+++ b/my photography.html
@@ -139,7 +139,7 @@ font-family:Times new roman;
 <body>
 
 <div class="topright" >
-<img src="Principal.jpg" width="280"height="220">
+<img src="IMG_20181223_180448_730.jpg" width="280"height="220">
 </div>
 <div class="top" >
 <h1>My photography</h1>
