--- a/my photography.html
+++ b/my photography.html
@@ -54,6 +54,7 @@ border:2px solid silver;
 width:660px;
 height:220px;
 float:left;
+  color:white;
 background-image:url('https://www.java2s.com/Code/HTMLCSSDemo/photography-images/hdr_bg.jpg');
 }
 .top h1{
