--- a/practic(4).html
+++ b/practic(4).html
@@ -33,7 +33,7 @@ body{
  </head> 
  <body> 
   <div class="container main"> 
-   <section class="banner-section" style="background-image: url(https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/banner1.png);"> 
+   <section class="banner-section" style="background-image: url(happy-new-year-animated-images.gif);"> 
     <div class="overlay"> 
      <div class="logo"> 
       <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/uploads/logo/001111.png" alt="Logo"> 
