--- a/practic(4).html
+++ b/practic(4).html
@@ -370,7 +370,7 @@ margin-top:5px;
 <li>প্রাথমিক সমাপনী কর্নার<br>
 <img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/9fab4051_90c4_41b4_9e47_e8b21f61bf24/girl-with-ponytails%20(4).png" width="120"height="100"><a href="#" > £ প্রাথ.সমাপনী</a> <br><a href="#" > £ বৃত্তি</a> <br><a href="#" >£ মাদ্রাসা</a></li>
 <li>কারিগরি শিক্ষা কর্নার<br>
-<img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/1bb65a9d_62d2_42d1_8996_f6f06502c759/checklist-symbol%20(3).png"width="120"height="100"><a href="https://kmrasel9748.github.io/newexprience2/Computer" >£ কম্পিউটার</a><br><a href="#" >£ মার্কেটিং</a> <br><a href="https://www.sec.ac.bd/" >£ ইঞ্জিনিয়ারিং</a><br><a href="#" > £ ডিপ্লমা</a></li>
+<img src="http://nctb.portal.gov.bd/sites/default/files/files/nctb.portal.gov.bd/front_service_box/1bb65a9d_62d2_42d1_8996_f6f06502c759/checklist-symbol%20(3).png"width="120"height="100"><a href="https://kmrasel9748.github.io/newexprience2/Computer" >£ কম্পিউটার</a><br><a href="#" >£ মার্কেটিং</a> <br><a href="https://www.sec.ac.bd/" >£ ইঞ্জিনিয়ারিং</a><br><a href="www.eduicon.com/Institute/More/?page=institute.php&Institute_Nature_ID=2&Institute_Category_ID=2&Degree_Level_ID=1" > £ ডিপ্লমা</a></li>
 <li>রেজাল্টশীট কর্নার<br>
 <a href="https://kmrasel9748.github.io/newexprience2/Results%20sheet20"><img src="https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/result_sheet.png"width="120"height="100">£ এইচ,এস,সি (২০১৭)<br>£ এস,এস,সি (২০১৫) <br>£ জে,ডি.সি</a></li>
 <li>ব্যক্তিগত সাইট কর্নার<br>
