--- a/practic(4).html
+++ b/practic(4).html
@@ -33,7 +33,7 @@ body{
  </head> 
  <body> 
   <div class="container main"> 
-   <section class="banner-section" style="background-image: url(giphy.gif);"> 
+   <section class="banner-section" style="background-image: url(5.gif);"> 
     <div class="overlay"> 
      <div class="logo"> 
       <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/uploads/logo/001111.png" alt="Logo"> 
