--- a/practic(4).html
+++ b/practic(4).html
@@ -62,7 +62,7 @@ body{
      <li><a href="https://kmrasel9748.github.io/newexprience2/About%20me">সম্পর্কে</a></li> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/My%20personal%20bayodata">পার্সোনাল বায়োডাটা</a></li> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/Educational%20performation">শিক্ষাগত রেকর্ড</a></li> 
-     <li><a href="">ফলাফল</a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/folafol.html">ফলাফল</a></li> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/my%20photography">ফটো</a></li> 
      <li><a href="https://kmrasel9748.github.io/newexprience2/Contact%20me2">যোগাযোগ</a> </li> 
     </ul> 
