--- a/folafol.html
+++ b/folafol.html
@@ -357,7 +357,7 @@ list-style:none;
 </ul>
 </div>
 <div class="top1" >
-<img src="6.gif" width="960"height="250">
+<img src="https://kmrasel.github.io/newexprience/aaa.gif" width="960"height="250">
 </div>
 <div class="top2s1" >
 News
