--- a/practic(4).html
+++ b/practic(4).html
@@ -335,11 +335,42 @@ background:blue;
 text-align:center;
 }
 </style>
-<div class="news" >
-<div class="new1" >
-<b>News:</b>sbndndndnd
+
+ 
+ 
+ <style type="text/css">
+.top2s1{
+border:2px solid silver;
+width:150px;
+height:30px;
+margin-top:10px;
+float:left;
+background:red;
+color:white;
+text-align:center;
+font-size:25px;
+}
+.top2s2{
+border:2px solid silver;
+width:500px;
+height:30px;
+margin-top:10px;
+float:right;
+background:green;
+color:white;
+text-align:center;
+font-size:25px;
+}
+</style>
+<div class="top2s1" >
+News
 </div>
-</div>
+<div class="top2s2" >
+<marquee>
+স্বাগতম আমার ফলাফল পেইজ পরিদর্শনের জন্য। এখানে আমার ধারাবাহিক অগ্রগতি লিপিবদ্ধ করা রয়েছে। 
+</marquee>
+ 
+ 
 <style type="text/css">
 .items ul li{
 margin:10px;
