--- a/practic(4).html
+++ b/practic(4).html
@@ -355,7 +355,7 @@ border:2px solid silver;
 width:300px;
 height:30px;
 margin-top:10px;
-
+float:left;
 background:green;
 color:white;
 text-align:center;
