--- a/practic(4).html
+++ b/practic(4).html
@@ -319,7 +319,7 @@ family: Verdana; color: #000000">blog counter</a>
 </div>
 </div>
 <style>
-.news{
+.newsz{
 margin-top:20px;
 border:2px solid silver;
 width:69.5%;
@@ -335,7 +335,7 @@ background:blue;
 text-align:center;
 }
 </style>
-<div class="news">
+<div class="newsz">
  <b>hajsjsjdj</b>
  </div>
  
