--- a/practic(4).html
+++ b/practic(4).html
@@ -336,7 +336,57 @@ text-align:center;
 }
 </style>
 <div class="newsz">
- <b>hajsjsjdj</b>
+ <style>
+ 
+ .newsa{
+
+border:2px solid silver;
+
+width:150px;
+
+height:30px;
+
+float:left;
+
+color:black;
+
+text-align:center;
+
+font-size:26px;
+
+}
+
+.newsb{
+
+border:2px solid silver;
+
+width:500px;
+
+height:30px;
+
+float:right;
+
+}
+
+</style>
+
+
+
+<div class="newsa" >
+
+News
+
+</div>
+
+<div class="newsb" >
+
+</div>
+
+
+ 
+ 
+ 
+ 
  </div>
  
  
