--- a/practic(4).html
+++ b/practic(4).html
@@ -358,11 +358,12 @@ font-size:26px;
 
 border:2px solid silver;
 
-width:510px;
+width:540px;
 
 height:30px;
 
 float:right;
+ background:green;
 
 }
 
