--- a/practic(4).html
+++ b/practic(4).html
@@ -324,7 +324,7 @@ margin-top:20px;
 border:2px solid silver;
 width:69.5%;
 height:30px;
-background:#F5F5F5;
+background:red;
 float:left;
 }
 .news b{
@@ -346,11 +346,12 @@ height:40px;
 
 float:left;
 
-color:black;
+color:white;
 
 text-align:center;
 
-font-size:26px;
+font-size:20px;
+  background:red;
 
 }
 
@@ -364,6 +365,8 @@ height:40px;
 
 float:right;
  background:green;
+ font-size:20px;
+ color:white;
 
 }
 
@@ -378,7 +381,7 @@ News
 </div>
 
 <div class="newsb" >
-
+jsjsjdj sjsjsjd sjskkdkdj sjsjdjsj
 </div>
 
 
