--- a/practic(4).html
+++ b/practic(4).html
@@ -321,7 +321,7 @@ family: Verdana; color: #000000">blog counter</a>
 <style>
 .newsz{
 margin-top:20px;
-border:2px solid silver;
+
 width:69.5%;
 height:30px;
 
@@ -364,7 +364,7 @@ width:530px;
 height:30px;
 
 float:right;
- background:green;
+ background:blue;
  font-size:20px;
  color:white;
 
