--- a/practic(4).html
+++ b/practic(4).html
@@ -381,7 +381,11 @@ News
 </div>
 
 <div class="newsb" >
-jsjsjdj sjsjsjd sjskkdkdj sjsjdjsj
+<marquee>
+
+স্বাগতম আমার নতুন ডিজিটাল শিক্ষাগত ওয়েবসাইট পরিদর্শনের জন্য। এখানে ক্যাটাগরি আকারে সবকিছুই পরিদর্শন করতে পারবেন।  
+
+</marquee>
 </div>
 
 
