--- a/practic(4).html
+++ b/practic(4).html
@@ -451,7 +451,26 @@ margin-top:5px;
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">£ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">£ Songgram</a><br><a href="https://www.jugantor.com/">£ Juganttor</a></li>
 <li>Magical website<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100"><a href="http://www.thefacesoffacebook.com">£ World faces</a><br><a href="https://www.printfriendly.com/">£ Page printer</a><br><a href="https://zoomquilt.org">£ Vootury</a><br><a href="https://yyyyyyy.info">£ amazine</a></li>
+  
+ 
+ 
+ 
+ 
+ 
+ <li>Online Newspapers<br>
 
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">£ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">£ Songgram</a><br><a href="https://www.jugantor.com/">£ Juganttor</a></li>
+
+<li>Magical website<br>
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100"><a href="http://www.thefacesoffacebook.com">£ World faces</a><br><a href="https://www.printfriendly.com/">£ Page printer</a><br><a href="https://zoomquilt.org">£ Vootury</a><br><a href="https://yyyyyyy.info">£ amazine</a></li>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 </ul>
 </div>
 <style type="text/css">
