--- a/practic(4).html
+++ b/practic(4).html
@@ -447,8 +447,8 @@ margin-top:5px;
 <a href="https://facebook.com" >£ Facebook</a><br><a href="https://youtube.com" >£ Youtube</a><br><a href="https://google.com" >£ Google Sarch</a><br><a href="http://www.bing.com/?scope=web&mkt=en-WW&FORM=QBLH" >£ Bing Sarch</a><br><a href="https://twitter.com" >£ Twitter</a></li>
 <li>Learning Educational Websites<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="https://bn.khanacademy.org/" >£ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >£ Wikipidia</a><br><a href="http://nctb.gov.bd/" >£ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >£ Sikkah</a></li>
-<li>Online Newspapers<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Dig3Hm41Mb3kbv1EfdCJGcKNEaepeRXSFCk54mrIRVCx2sKx9GsjuFc" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">£ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">£ Songgram</a><br><a href="https://www.jugantor.com/">£ Juganttor</a></li>
+<li>The place of Bangladesh<br>
+<img src="tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="100"><a href="https://www.prothomalo.com/">£ Prothom-Alo</a><br><a href="http://www.dailynayadiganta.com/">£ Noya-Digonto</a><br><a href="http://www.dailysangram.com/">£ Songgram</a><br><a href="https://www.jugantor.com/">£ Juganttor</a></li>
 <li>Magical website<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100"><a href="http://www.thefacesoffacebook.com">£ World faces</a><br><a href="https://www.printfriendly.com/">£ Page printer</a><br><a href="https://zoomquilt.org">£ Vootury</a><br><a href="https://yyyyyyy.info">£ amazine</a></li>
   
