--- a/practic(4).html
+++ b/practic(4).html
@@ -448,7 +448,7 @@ margin-top:5px;
 <li>Learning Educational Websites<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="https://bn.khanacademy.org/" >£ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >£ Wikipidia</a><br><a href="http://nctb.gov.bd/" >£ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >£ Sikkah</a></li>
 <li>The place of Bangladesh<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="100"><a href="###">£ The rivers of bangladesh</a><br><a href="###">£ The animals of bangladesh</a><br><a href="###">£ The forest of bangladesh</a><br><a href="###">£ The mugium of bangladesh</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="100"><a href="###">£ The rivers of Bd</a><br><a href="###">£ The animals of Bd</a><br><a href="###">£ The forest of Bd</a><br><a href="###">£ The mugium of Bd</a></li>
 <li>Magical website<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100"><a href="http://www.thefacesoffacebook.com">£ World faces</a><br><a href="https://www.printfriendly.com/">£ Page printer</a><br><a href="https://zoomquilt.org">£ Vootury</a><br><a href="https://yyyyyyy.info">£ amazine</a></li>
   
