--- a/practic(4).html
+++ b/practic(4).html
@@ -449,8 +449,8 @@ margin-top:5px;
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVzcWKKMkvHsvQlrpLbADi0KXMtYfh-BAqDVUoViViA9JGzEeypfxuCOWc"width="120"height="100" ><a href="https://bn.khanacademy.org/" >£ Khan Academy</a><br><a href="https://bn.m.wikipedia.org/wiki/বাংলা_উইকিপিডিয়া" >£ Wikipidia</a><br><a href="http://nctb.gov.bd/" >£ Nctb board</a><br><a href="http://shikkhok.com/কোর্স-তালিকা/" >£ Sikkah</a></li>
 <li>The place of Bangladesh<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="100"><a href="https://www.shutterstock.com/search/bangladesh+river">£ The rivers of Bd</a><br><a href="###">£ The animals of Bd</a><br><a href="https://pixabay.com/en/photos/bangladesh/">£ The forest of Bd</a><br><a href="###">£ The mugium of Bd</a></li>
-<li>Magical website<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPIUSIMT4oqB1zdHyT2Dx3y-LzwIbWpWd2FVxiGCjiC0XNSIB9uPWZg8YR_Q"width="120" height="100"><a href="http://www.thefacesoffacebook.com">£ World faces</a><br><a href="https://www.printfriendly.com/">£ Page printer</a><br><a href="https://zoomquilt.org">£ Vootury</a><br><a href="https://yyyyyyy.info">£ amazine</a></li>
+<li>Downloder sites<br>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAXYcOcOIAMAGwmC8qTAMF1hLpl8u4ckZ3vGwealhS7-UmKwSEw9NexhY"width="120" height="100"><a href="http://www.fusionbd.com">£ FusionBd</a><br><a href="https://www.bdmusic24.net/">£ Bd music</a><br><a href="https://waptrick.com">£ Waptrick</a><br><a href="https://musicjan.com">£ Musicjan</a></li>
   
  
  
