--- a/practic(4).html
+++ b/practic(4).html
@@ -487,7 +487,7 @@ float:left;
 <div class="welcome">
 
 
-<!DOCTYPE html>#0000CD
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -498,7 +498,7 @@ m2{
 color:#fff;
 font-size:60px;
 text-align:center;
-margin-top:10px;
+margin-top:0px;
 text-shadow:0px 0px 10px gold,
             0px 0px 20px gold,
             0px 0px 30px gold,
@@ -511,7 +511,7 @@ n2{
 color:#fff;
 font-size:60px;
 text-align:center;
-margin-top:5px;
+margin-top:0px;
 text-shadow:0px 0px 10px #fe3a80,
             0px 0px 20px #fe3a80,
             0px 0px 30px #fe3a80,
