--- a/practic(4).html
+++ b/practic(4).html
@@ -450,7 +450,7 @@ margin-top:5px;
 <li>The place of Bangladesh<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgtudlWztqfMTcj7P2zBX8Nh7UQnAIXj3apVYEtN6c5fVK3pngnfWGTig" width="120"height="100"><a href="https://www.shutterstock.com/search/bangladesh+river">£ The rivers of Bd</a><br><a href="###">£ The animals of Bd</a><br><a href="https://pixabay.com/en/photos/bangladesh/">£ The forest of Bd</a><br><a href="###">£ The mugium of Bd</a></li>
 <li>Downloder sites<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAXYcOcOIAMAGwmC8qTAMF1hLpl8u4ckZ3vGwealhS7-UmKwSEw9NexhY"width="120" height="100"><a href="http://www.fusionbd.com">£ FusionBd</a><br><a href="https://www.bdmusic24.net/">£ Bd music</a><br><a href="https://waptrick.one/">£ Waptrick</a><br><a href="https://youtube.com">£ Youtube</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAXYcOcOIAMAGwmC8qTAMF1hLpl8u4ckZ3vGwealhS7-UmKwSEw9NexhY"width="120" height="100"><a href="http://www.fusionbd.com">£ FusionBd</a><br><a href="https://www.bdmusic24.net/">£ Bd music</a><br><a href="https://banglanatok.com/">£ Waptrick</a><br><a href="https://youtube.com">£ Youtube</a></li>
   
  
  
