--- a/practic(4).html
+++ b/practic(4).html
@@ -441,7 +441,7 @@ margin-top:5px;
 <li>আমার প্রোগ্রাম সমূহ<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3DMP9qz3FmvE3KT60UGn4g1whqxVa8pXPgImQgIw9_wH5g5n17DABw"width="120"height="100" ><a href="#" >£ ফটোগ্রাফি</a><br><a href="https://kmrasel9748.github.io/newexprience2/Documents" >£ পার্সোনাল ডকুমেন্ট</a><br><a href="https://kmrasel.github.io/newexprience/My%20poem.html" >£ কবিতা সমূহ</a><br><a href="http://dik-grantha.com/" >£ লাইব্রেরী</a></li>
 <li>প্রাতিষ্ঠানিক ওয়েবসাইট<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfXJL5OmlHqnJoJWkIk6DpupxvsjzWM5VxVSFpRloqdfgllbyp8N7X2mLh" width="120"height="100"><a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/" >£ কলেজ ওয়েবসাইট</a> <br><a href="http://www.nu.ac.bd/" >£ বিশ্ববিদ্যালয় ওয়েবসাইট</a></li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfXJL5OmlHqnJoJWkIk6DpupxvsjzWM5VxVSFpRloqdfgllbyp8N7X2mLh" width="120"height="100"><a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/" >£ কলেজ ওয়েবসাইট</a> <br><a href="http://www.nu.ac.bd/" >£ বিশ্ববিদ্যালয় ওয়েবসাইট</a><br><a href="http://www.bteb.gov.bd">কারিগরি শিক্ষা বোর্ড</a></li>
 <li>Social Media Corner<br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEOLJ1zgqYwgbN86KVv5nLSLr2F0DSgOHgi_yBk-lQpl6xguuWn4Az9pWC"width="120" height="100">
 <a href="https://facebook.com" >£ Facebook</a><br><a href="https://youtube.com" >£ Youtube</a><br><a href="https://google.com" >£ Google Sarch</a><br><a href="http://www.bing.com/?scope=web&mkt=en-WW&FORM=QBLH" >£ Bing Sarch</a><br><a href="https://twitter.com" >£ Twitter</a></li>
