--- a/folafol.html
+++ b/folafol.html
@@ -373,7 +373,7 @@ News
 BA (Hon's) 3rd year 2020
 </div>
 <div class="inimg" >
-<img src="1.Jpeg" width="150"height="240">
+<img src="https://kmrasel9748.github.io/newexprience2/Rsl3.jpg" width="150"height="240">
 </div>
 <div class="informationadds" >
 <address>
